# cho

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  INSTRUCTIONS.md  biome.json  commitlint.config.js  package.json  tsconfig.json
crates/cho-cli/: Cargo.toml
crates/cho-cli/src/: audit.rs  context.rs  envelope.rs  error.rs  main.rs  registry.rs
crates/cho-cli/src/commands/: accounts.rs  auth.rs  budgets.rs  company.rs  config.rs  contacts.rs  credit_notes.rs  currencies.rs  finance.rs  health.rs  init.rs  invoices.rs  items.rs  linked_transactions.rs  manual_journals.rs  mod.rs  organisations.rs  overpayments.rs  payments.rs  payroll.rs  prepayments.rs  purchase_orders.rs  quotes.rs  repeating_invoices.rs  reports.rs  resources.rs  resources_helpers.rs  resources_sales.rs  start.rs  summary.rs  tax.rs  tax_rates.rs  tools.rs  tracking_categories.rs  transactions.rs  utils.rs
crates/cho-cli/src/output/: csv.rs  json.rs  mod.rs  table.rs
crates/cho-cli/tests/: cli_contract.rs  cli_drift.rs  cli_integration.rs
crates/cho-mcp/: Cargo.toml
crates/cho-sdk/: Cargo.toml
crates/cho-sdk/src/: blocking.rs  client.rs  config.rs  error.rs  home.rs  liabilities.rs  lib.rs
crates/cho-sdk/src/api/: accounts.rs  bank_transactions.rs  budgets.rs  contacts.rs  credit_notes.rs  currencies.rs  identity.rs  invoices.rs  items.rs  linked_transactions.rs  manual_journals.rs  mod.rs  organisations.rs  overpayments.rs  payments.rs  prepayments.rs  purchase_orders.rs  quotes.rs  repeating_invoices.rs  reports.rs  resource.rs  specs.rs  tax_rates.rs  tracking_categories.rs
crates/cho-sdk/src/auth/: credentials.rs  mod.rs  oauth.rs  pkce.rs  storage.rs  token.rs
crates/cho-sdk/src/http/: mod.rs  pagination.rs  rate_limit.rs  request.rs
crates/cho-sdk/src/models/: account.rs  bank_transaction.rs  budget.rs  common.rs  connection.rs  contact.rs  credit_note.rs  currency.rs  dates.rs  enums.rs  invoice.rs  item.rs  linked_transaction.rs  manual_journal.rs  mod.rs  organisation.rs  overpayment.rs  payment.rs  prepayment.rs  purchase_order.rs  quote.rs  repeating_invoice.rs  report.rs  tax_rate.rs  tracking_category.rs
crates/cho-sdk/tests/: http_contract.rs  wiremock_integration.rs
crates/cho-tui/: Cargo.toml
crates/cho-tui/src/: api.rs  app.rs  cache.rs  config.rs  fetch.rs  main.rs  palette.rs  routes.rs  theme.rs  ui.rs
scripts/: build.sh  macos-codesign-status.sh  macos-codesign.sh  macos-keychain-reset.sh
