[workspace]
members = ["crates/cho-sdk", "crates/cho-cli", "crates/cho-tui"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88.0"
version = "0.1.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45.1", features = ["full"] }

# HTTP and URLs
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5.7"

# Serialization / config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.23"

# CLI
clap = { version = "4.5.48", features = ["derive", "env"] }

# Output formatting
comfy-table = "7.2.1"

# Errors + logging
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Time, IDs, secrets, storage
chrono = { version = "0.4.42", features = ["serde"] }
base64 = "0.22.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
secrecy = "0.10.3"
dirs = "6.0.0"

# OAuth + browser
open = "5.3.3"
rand = "0.9.2"

# File locking for audit history
fs2 = "0.4.3"

# Testing
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.22.0"
wiremock = "0.6.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
