[package]
name = "cho-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "cho"
path = "src/main.rs"

[dependencies]
cho-sdk = { path = "../cho-sdk" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
comfy-table = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
fs2 = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
