[package]
name = "cho-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
keyring = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
open = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
