[package]
name = "cho-tui"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "cho-tui"
path = "src/main.rs"

[dependencies]
cho-sdk = { path = "../cho-sdk" }
chrono = { workspace = true }
crossterm = "0.29.0"
ratatui = "0.30.0"
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
